--- a/config/eww/eww.scss
+++ b/config/eww/eww.scss
@@ -1,9 +1,9 @@
 // Variable Color's
-$background: #393b4d;
+$background: #303241;
 $foreground: #e3e6ee;
 
-$black: #44465c;
-$gray: #393b4d;
+$black: #393a4d;
+$gray: #303241;
 $red: #ec6a88;
 $green: #3fdaa4;
 $yellow: #efb993;
@@ -40,7 +40,7 @@ scale trough {
     margin: 0.6rem;
 }
 
-.button-off { color: $red}
+.button-off { color: $blue}
 
 .button-reb { 
     color: $magenta;
